# social-simulation-replications

./: .gitignore  .gitmodules  AGENTS.md  README.ja.md  README.md  replications.toml
.github/workflows/: catalog.yml
docs/: adding-a-replication.ja.md  adding-a-replication.md  replications.ja.md  replications.md  simulators.ja.md  simulators.md
docs/ja/: README.md
template/: README.md
template/files/: .gitignore  README.md  pyproject.toml
template/files/_claude/: CLAUDE.md
template/files/simulation/: Cargo.toml
template/files/simulation/src/: main.rs
template/files/tools/: pyproject.toml
template/files/tools/src/_NAME_tools/: cli.py  show_experiment_settings.py  visualize.py  visualize_sweep.py
tools/: gen_catalog.py
