[project]
name = "{{NAME}}-tools"
version = "0.1.0"
description = "Visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.scripts]
{{NAME}}-tools = "{{NAME}}_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{NAME}}_tools"]
